<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <View
        android:layout_width="48dp"
        android:layout_height="5dp"
        android:background="@drawable/bg_round_corner"
        android:backgroundTint="#D8D8D8"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/new_taskbox_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_taskbox_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/new_taskbox_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/new_todo_save_btn_text"
            android:textColor="@color/colorAccent"
            android:background="@drawable/bg_ripple_effect"
            android:layout_gravity="center_vertical|end"
            />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/new_taskbox_select_bg_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_taskbox_bg_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <EditText
        android:id="@+id/new_taskbox_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_archive"
        android:drawableTint="#CCC"
        android:background="@null"
        android:hint="@string/new_taskbox_title_hint"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:minHeight="48dp"
        android:inputType="text"
        android:maxLength="50"
        />

    <!--    备注-->
    <EditText
        android:id="@+id/new_taskbox_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/new_taskbox_intro_hint"
        android:minLines="4"
        android:maxLength="300"
        android:textSize="14sp"
        android:paddingStart="32dp"
        android:paddingEnd="0dp"
        android:gravity="top"
        android:layout_marginBottom="24dp"
        tools:text="@string/tool_long_text"
        />


</LinearLayout>