<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/new_daily_rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <ImageView
            android:id="@+id/new_daily_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back_black"
            android:contentDescription="@string/img_desc"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:id="@+id/new_daily_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_daily_activity_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        
        <TextView
            android:id="@+id/new_daily_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/new_todo_save_btn_text"
            android:textColor="@color/colorAccent"
            android:background="@drawable/bg_ripple_effect"
            android:layout_gravity="center_vertical|end"
            />

    </FrameLayout>

    <!--    事项名称-->
    <EditText
        android:id="@+id/new_daily_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_edit"
        android:drawableTint="#CCC"
        android:background="@null"
        android:hint="@string/new_daily_thing_hint"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:minHeight="48dp"
        android:maxLines="3"
        android:inputType="textMultiLine"
        android:paddingBottom="4dp"
        android:maxLength="60"
        />

    <!--    备注-->
    <EditText
        android:id="@+id/new_daily_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/new_daily_remark_hint"
        android:minLines="6"
        android:textSize="14sp"
        android:paddingStart="32dp"
        android:paddingEnd="0dp"
        android:gravity="top"
        android:layout_marginBottom="24dp"
        android:lineSpacingExtra="2dp"
        android:ellipsize="end"
        android:maxLength="400"
        tools:text="@string/tool_long_text"
        />

    <!--    开始时间-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.giz.recordcell.widgets.ShadeTextView
            android:id="@+id/new_daily_start_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="start|center_vertical"
            android:text="@string/new_daily_no_time_text"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_play_circle_outline"
            android:drawablePadding="8dp"
            tools:text="2020年1月24日 14:20"
            app:stv_shadeLength="10dp"
            app:stv_shadeColor="@color/secondaryLightColorAccent"
            app:fullRoundCorner="true"
            app:stv_solidColor="@color/secondaryColorAccent"
            app:stv_yOffset="2dp"
            />

    </LinearLayout>

    <!--    结束时间-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.giz.recordcell.widgets.ShadeTextView
            android:id="@+id/new_daily_end_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="start|center_vertical"
            android:text="@string/new_daily_no_end_time_text"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_stop"
            android:drawablePadding="8dp"
            app:stv_shadeLength="10dp"
            app:stv_shadeColor="@color/secondaryLightColorAccent"
            app:fullRoundCorner="true"
            app:stv_solidColor="@color/secondaryColorAccent"
            app:stv_yOffset="2dp"
            />
        <com.giz.recordcell.widgets.ShadeImageButton
            android:id="@+id/new_daily_end_time_delete_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_close"
            android:scaleType="center"
            android:visibility="gone"
            tools:visibility="visible"
            app:sib_type="circle"
            app:sib_solidColor="@color/red"
            app:sib_shadeColor="#6BFF0000"
            />

    </LinearLayout>
    
    <!--    重复间隔-->
    <com.giz.recordcell.widgets.ShadeTextView
        android:id="@+id/new_daily_repeat_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="start|center_vertical"
        android:text="@string/new_daily_repeat_everyday_text"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_repeat"
        android:drawablePadding="8dp"
        app:stv_shadeLength="10dp"
        app:stv_shadeColor="@color/secondaryLightColorAccent"
        app:fullRoundCorner="true"
        app:stv_solidColor="@color/secondaryColorAccent"
        app:stv_yOffset="2dp"
        />

    <LinearLayout
        android:id="@+id/new_daily_action_btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="16dp">

        <com.giz.recordcell.widgets.ShadeImageButton
            android:id="@+id/new_daily_calendar_btn"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_event_available"
            android:tint="@color/black"
            android:scaleType="centerInside"
            app:sib_type="circle"
            app:sib_shadeColor="#E1E1E1"
            app:sib_yOffset="2.5dp"
            />

        <com.giz.recordcell.widgets.ShadeImageButton
            android:id="@+id/new_daily_edit_btn"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_edit"
            android:tint="@color/black"
            android:scaleType="centerInside"
            app:sib_type="circle"
            app:sib_shadeColor="#E1E1E1"
            app:sib_yOffset="2.5dp"
            />

        <com.giz.recordcell.widgets.ShadeImageButton
            android:id="@+id/new_daily_delete_btn"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_delete"
            android:scaleType="center"
            app:sib_type="circle"
            app:sib_solidColor="@color/red"
            app:sib_shadeColor="#6BFF0000"
            app:sib_yOffset="2.5dp"
            />

    </LinearLayout>

</LinearLayout>